# nobel_kb

./: .gitignore  pyproject.toml
nobel_kb/: run.py  schemas.py
nobel_kb/configs/: deployment.json
nobel_kb/data/: nobel-prize-laureates-2024.csv  nobel-prize-laureates.csv
